# chex

./: CMakeLists.txt  README.md  chex.desktop.in  ciphers-systems.menu  ciphers.directory  cmake_uninstall.cmake.in
include/: chexwindow.h
resources/: resources.qrc
src/: README.md  chexwindow.cpp  main.cpp
